[package]
name = "totp-cracker-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rizerphe/totp-cracker-wasm"
description = "A multithreaded TOTP cracker written in Rust, compiled to WebAssembly."

[dependencies]
wasm-bindgen = "0.2"
rayon = "1.8"
wasm-bindgen-rayon = "1.2"
js-sys = "0.3.69"
totp-rs = { version = "5.5.1", features = ["qr", "otpauth"] }
base64 = "0.22.1"
prost = "0.13.1"
url = "2.5.2"

[lib]
crate-type = ["cdylib", "rlib"]
